Ensure text-align:left for .mejs-ted for proper scrubber playhead positioning

--- a/app/assets/stylesheets/dcv/dcv.css.scss
+++ b/app/assets/stylesheets/dcv/dcv.css.scss
@@ -1271,6 +1271,7 @@ h2[itemprop="name"] {
 
 		.mejs-ted {
 			border: 1px solid #6C6C6C;
+			text-align: left;
 		}
 		.view-synchronized-media {
 			margin-top: 1em;
